Fix plugins quizme & mvideo

--- a/public/src/default-config.json
+++ b/public/src/default-config.json
@@ -22,6 +22,14 @@
   "plugin": {
     "plugins": [
       {
+        "type": "quizme",
+        "icon": "{{baseDir}}templates/assets/plugins/quizme/quizme-icon.png"
+      },
+      {
+        "type": "mvideo",
+        "icon": "{{baseDir}}templates/assets/plugins/mvideo/mvideo-icon.png"
+      },
+      {
         "type": "text",
         "icon": "{{baseDir}}templates/assets/plugins/text/text-icon.png"
       },
